pushed final version of the project